fix for contrast

--- a/css/endScreenStyle.css
+++ b/css/endScreenStyle.css
@@ -48,10 +48,10 @@
   font-size:        larger;
   font-weight:      bolder;
   color:          white;
-  background-color: darkgray;
+  background-color: rgb(58, 105, 119);
   margin-top: 1em;
 }
 
 #save:hover {
-  background-color: darkcyan;
+  background-color: rgb(0, 71, 71);
 }
